Fix for manual test. [skip ci]

--- a/packages/ckeditor5-table/tests/manual/tablelayout.html
+++ b/packages/ckeditor5-table/tests/manual/tablelayout.html
@@ -35,7 +35,7 @@
 	<h3>Source: &lt;table class="table layout-table"&gt; containing &lt;caption&gt; => result = tableType will be content table and &lt;caption&gt; will be preserved</h3>
 
 	<table class="table layout-table">
-		<caption>Should be layout table</caption>
+		<caption>Should be content table</caption>
 		<tr>
 			<td>a</td>
 			<td>b</td>
@@ -228,7 +228,7 @@
 
 	<figure>
 		<table>
-			<caption>Should be layout table</caption>
+			<caption>Should be content table</caption>
 			<tr>
 				<td>a</td>
 				<td>b</td>
@@ -247,7 +247,7 @@
 
 	<figure class="table">
 		<table>
-			<caption>Should be layout table</caption>
+			<caption>Should be content table</caption>
 			<tr>
 				<td>a</td>
 				<td>b</td>
@@ -266,7 +266,7 @@
 
 	<figure>
 		<table class="table layout-table">
-			<caption>Should be layout table</caption>
+			<caption>Should be content table</caption>
 			<tr>
 				<td>a</td>
 				<td>b</td>
