Add balloon editor support.

--- a/packages/ckeditor5-emoji/tests/manual/emoji.html
+++ b/packages/ckeditor5-emoji/tests/manual/emoji.html
@@ -38,6 +38,10 @@
     <p>This is <a href="http://ckeditor.com">CKEditor 5</a> from <a href="http://cksource.com">CKSource</a>.</p>
 </div>
 
+<h3><code>EmojiMention</code> + <code>EmojiPicker</code> + <code>BalloonEditor</code></h3>
+<div id="editor-emoji-picker-balloon-editor">
+    <p>This is <a href="http://ckeditor.com">CKEditor 5</a> from <a href="http://cksource.com">CKSource</a>.</p>
+</div>
 
 <template id="content">
     <h3>Overview of Emojis</h3>
