--- a/packages/ckeditor5-table/tests/manual/tablelayout.html
+++ b/packages/ckeditor5-table/tests/manual/tablelayout.html
@@ -1,4 +1,5 @@
 <div id="editor">
+
 	<h2>Source structure: &lt;table&gt;</h2>
 	<hr>
 
@@ -29,6 +30,30 @@
 			<td>2</td>
 			<td>3</td>
 		</tr>
+	</table>
+
+
+	<hr>
+	<h3>Source: &lt;table class="table layout-table ck-table-resized" style="width:30%;"&gt; => result = tableType will be layout table with specified columns width</h3>
+
+	<table class="table layout-table" style="width:30%;" role="presentation">
+		<colgroup>
+			<col style="width:28.59%;">
+			<col style="width:19.93%;">
+			<col style="width:51.48%;">
+		</colgroup>
+		<tbody>
+			<tr>
+				<td>a</td>
+				<td>b</td>
+				<td>c</td>
+			</tr>
+			<tr>
+				<td>1</td>
+				<td>2</td>
+				<td>3</td>
+			</tr>
+		</tbody>
 	</table>
 
 	<hr>
@@ -218,8 +243,6 @@
 			</tr>
 		</tbody>
 	</table>
-
-
 
 	<hr>
 	<h2>Source structure: &lt;figure&gt;&lt;table&gt;</h2>
