Added external table to manual test.

--- a/packages/ckeditor5-table/tests/manual/tablelayout.html
+++ b/packages/ckeditor5-table/tests/manual/tablelayout.html
@@ -350,3 +350,56 @@
 		</table>
 	</figure>
 </div>
+
+
+<h2>Example table to copy and paste</h2>
+
+<div class="external-table-wrapper">
+
+	<table style="width: 40%;">
+		<tbody>
+			<tr>
+				<td>
+					<table>
+						<tbody>
+							<tr>
+								<td style="width:33.333333%;">&nbsp;</td>
+								<td style="width:33.333333%;">&nbsp;</td>
+								<td style="width:33.333333%;">&nbsp;</td>
+							</tr>
+							<tr>
+								<td style="width:33.333333%;">&nbsp;</td>
+								<td style="width:33.333333%;">&nbsp;</td>
+								<td style="width:33.333333%;">&nbsp;</td>
+							</tr>
+						</tbody>
+					</table>
+				</td>
+				<td>b</td>
+				<td>c</td>
+			</tr>
+			<tr>
+				<td>1</td>
+				<td>2</td>
+				<td>3</td>
+			</tr>
+		</tbody>
+	</table>
+</div>
+
+<style>
+	.external-table-wrapper {
+		margin-top: 20px;
+		padding: 2em;
+		background-color: rgba(0, 0, 0, 0.1);
+		border: 1px solid grey;
+		border-radius: 8px;
+	}
+
+	.external-table-wrapper table,
+	.external-table-wrapper td,
+	.external-table-wrapper th {
+		border: 1px solid black;
+		border-collapse: collapse;
+	}
+</style>
