Move dialogs inside fullscreen.

--- a/packages/ckeditor5-fullscreen/tests/manual/fullscreen.html
+++ b/packages/ckeditor5-fullscreen/tests/manual/fullscreen.html
@@ -10,6 +10,7 @@
 	</div>
 </div>
 
+<div class="presence"></div>
 <div class="editor-container">
 	<div class="document-editor__menu-bar"></div>
 	<div class="document-editor__toolbar"></div>
