Show widget handlers only on hovered one, without showing them on his parents.

--- a/packages/ckeditor5-table/tests/manual/tablelayout.html
+++ b/packages/ckeditor5-table/tests/manual/tablelayout.html
@@ -1,4 +1,69 @@
 <div id="editor">
+	<h3>Look of widget type around and selection handle is changed in layout tables, also only hovered table shows mention
+	earlier widget handlers.</h3>
+	<p></p>
+	<table class="table content-table" role="presentation">
+		<tbody>
+			<tr>
+				<td>
+					<p>foo</p>
+					<table class="table content-table" role="presentation">
+						<tbody>
+							<tr>
+								<td style="width:33.333333%;">bar</td>
+								<td style="width:33.333333%;">
+									<table class="table layout-table"
+										style="border-color:hsl(120, 75%, 60%);border-style:solid;width:100%;"
+										role="presentation">
+										<tbody>
+											<tr>
+												<td>baz</td>
+												<td>&nbsp;</td>
+												<td>&nbsp;</td>
+												<td>&nbsp;</td>
+											</tr>
+											<tr>
+												<td>&nbsp;</td>
+												<td style="border-color:hsl(0, 75%, 60%);">&nbsp;</td>
+												<td>&nbsp;</td>
+												<td>&nbsp;</td>
+											</tr>
+											<tr>
+												<td>&nbsp;</td>
+												<td>&nbsp;</td>
+												<td>&nbsp;</td>
+												<td>&nbsp;</td>
+											</tr>
+											<tr>
+												<td>&nbsp;</td>
+												<td>&nbsp;</td>
+												<td>&nbsp;</td>
+												<td>&nbsp;</td>
+											</tr>
+										</tbody>
+									</table>
+								</td>
+								<td style="width:33.333333%;">&nbsp;</td>
+							</tr>
+							<tr>
+								<td style="width:33.333333%;">&nbsp;</td>
+								<td style="width:33.333333%;">&nbsp;</td>
+								<td style="width:33.333333%;">&nbsp;</td>
+							</tr>
+						</tbody>
+					</table>
+				</td>
+				<td>b</td>
+				<td>c</td>
+			</tr>
+			<tr>
+				<td>1</td>
+				<td>2</td>
+				<td>3</td>
+			</tr>
+		</tbody>
+	</table>
+	<p></p>
 
 	<h2>Source structure: &lt;table&gt;</h2>
 	<hr>
