--- a/packages/ckeditor5-emoji/tests/manual/emoji.html
+++ b/packages/ckeditor5-emoji/tests/manual/emoji.html
@@ -2,6 +2,9 @@
     <!-- Required to fetch emoji database from https://cdn.jsdelivr.net -->
     <meta http-equiv="Content-Security-Policy"
           content="connect-src 'self' https://cksource.com http://*.cke-cs.com https://cdn.ckeditor.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&display=swap" rel="stylesheet">
 </head>
 
 <p>
@@ -9,7 +12,7 @@
     <input type="radio" id="unicode-15" name="unicode" value="15"><label for="unicode-15">15</label>
     <input type="radio" id="unicode-16" name="unicode" value="16"><label for="unicode-16">16</label>
     <input type="radio" id="unicode-null" name="unicode" value="null" checked><label for="unicode-null">use the plugin default</label>
-    <input type="radio" id="unicode-6" name="unicode" value="6"><label for="unicode-6">invalid value</label>
+    <input type="radio" id="unicode-666" name="unicode" value="666"><label for="unicode-666">invalid value</label>
 </p>
 
 <p>
@@ -21,6 +24,12 @@
     <input type="radio" id="skin-medium-dark" name="skin" value="medium-dark"><label for="skin-medium-dark">👋🏾</label>
     <input type="radio" id="skin-dark" name="skin" value="dark"><label for="skin-dark">👋🏿</label>
     <input type="radio" id="skin-null" name="skin" value="null" checked><label for="skin-null">use the plugin default</label>
+</p>
+
+<p>
+    <b>Use "Noto Color Emoji" font</b>:
+    <input type="radio" id="custom-font-apply" name="custom-font" value="true"><label for="custom-font-apply">Apply</label>
+    <input type="radio" id="custom-font-reject" name="custom-font" value="false" checked><label for="custom-font-reject">Reject</label>
 </p>
 
 <h3><code>EmojiMention</code> + <code>EmojiPicker</code></h3>
