Inject CKE stylesheet into iframe element in manual test.

--- a/packages/ckeditor5-fullscreen/tests/manual/fullscreen.html
+++ b/packages/ckeditor5-fullscreen/tests/manual/fullscreen.html
@@ -95,7 +95,7 @@
 
 <iframe id="iframe"
 	class="iframe-with-editor"
-	srcdoc='<link rel="stylesheet" type="text/css" href="https://cdn.ckeditor.com/ckeditor5/44.3.0/ckeditor5.css">
+	srcdoc='<style>body { margin: 50px; }</style>
 	<div class="editor-container">
 	<div id="editor">
 		<h1 style="text-align:center;" id="e9c77dfcac3aa06596b87cc7b57f68dc4">The Flavorful Tuscany Meetup</h1>
