Add toolbar controls for toolbar.

--- a/packages/ckeditor5-fullscreen/tests/manual/fullscreen.html
+++ b/packages/ckeditor5-fullscreen/tests/manual/fullscreen.html
@@ -6,6 +6,8 @@
 	<div>
 		<p><input name="menu-bar" type="checkbox" id="menu-bar"><label for="menu-bar">Show menu bar outside fullscreen</label></p>
 		<p><input name="menu-bar-fullscreen" type="checkbox" id="menu-bar-fullscreen" checked><label for="menu-bar-fullscreen">Show menu bar in fullscreen</label></p>
+		<p><input name="toolbar" type="checkbox" id="toolbar"><label for="toolbar">Do not group toolbar outside fullscreen</label></p>
+		<p><input name="toolbar-fullscreen" type="checkbox" id="toolbar-fullscreen"><label for="toolbar-fullscreen">Do not group toolbar in fullscreen</label></p>
 		<p><input name="custom-container" type="checkbox" id="custom-container"><label for="custom-container">Use custom container</label></p>
 	</div>
 	<hr>
