--- a/tests/manual/article.html
+++ b/tests/manual/article.html
@@ -4,30 +4,22 @@
 			max-width: 800px;
 			margin: 20px auto;
 		}
+		section {
+			background: #fee;
+		}
+		section:before {
+			content: attr(id);
+		}
 	</style>
 </head>
 <div id="editor">
 	<h2>Heading 1</h2>
+	<section id="a"></section>
 	<p>Paragraph</p>
-	<p><strong>Bold</strong> <i>Italic</i> <a href="https://ckeditor.com">Link</a></p>
-	<ul>
-		<li>UL List item 1</li>
-		<li>UL List item 2</li>
-	</ul>
-	<ol>
-		<li>OL List item 1</li>
-		<li>OL List item 2</li>
-	</ol>
-	<figure class="image image-style-side">
-		<img alt="bar" src="sample.jpg">
-		<figcaption>Caption</figcaption>
-	</figure>
 	<blockquote>
 		<p>Quote</p>
-		<ul>
-			<li>Quoted UL List item 1</li>
-			<li>Quoted UL List item 2</li>
-		</ul>
+		<section id="b"></section>
 		<p>Quote</p>
 	</blockquote>
+	<p>FIN</p>
 </div>
