--- a/packages/ckeditor5-html-support/tests/manual/objects.html
+++ b/packages/ckeditor5-html-support/tests/manual/objects.html
@@ -8,7 +8,7 @@
 <textarea id="editor">
 	<p>
 	<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0">
-		<param name="allowFullscreen" value="true" />
+		<param name="allowFullScreen" value="true" />
 		<param name="quality" value="high" />
 		<param name="movie" value="https://example.com" />
 		<embed allowfullscreen="true" pluginspage="http://www.macromedia.com/go/getflashplayer" quality="high" src="https://example.com" type="application/x-shockwave-flash"></embed>
