Docs: deprecating builds. [short flow]

--- a/packages/ckeditor5-clipboard/tests/manual/dragdrop-blocks.html
+++ b/packages/ckeditor5-clipboard/tests/manual/dragdrop-blocks.html
@@ -3,7 +3,7 @@
 <div id="editor-classic">
 	<p>CKEditor 5 is a project that allows you to quickly and easily initialize one of the many types of editors it
 		offers in your application. At the same time, it is a framework for creating custom-tailored rich-text editing solutions. The former
-		requirement is met thanks to the <a
+		requirement was met thanks to the now deprecated <a
 				href="https://ckeditor5.github.io/docs/nightly/ckeditor5/latest/installation/legacy/getting-started/predefined-builds.html">predefined
 			CKEditor 5 builds</a>. The latter — thanks to CKEditor 5 Framework.</p>
 	<p>CKEditor 5 Framework is a highly-flexible and universal platform that provides a set of components allowing
