--- a/packages/ckeditor5-editor-inline/tests/manual/sticky.html
+++ b/packages/ckeditor5-editor-inline/tests/manual/sticky.html
@@ -1,7 +1,7 @@
 <header>
-	CKEditor&nbsp;5 - Sticky panel manual test
+	CKEditor&nbsp;5 - Inline editor sticky panel manual test
 </header>
-<div style="height: 120px;"></div>
+<div style="height: 120px; margin-bottom: 20px;"></div>
 
 <!-- editor top edge: 40 + 120 + 400 = 560 -->
 
