--- a/tests/manual/article.html
+++ b/tests/manual/article.html
@@ -4,6 +4,16 @@
 			max-width: 800px;
 			margin: 20px auto;
 		}
+
+		.tag-start, .tag-end {
+			display: inline-block;
+			padding: 0 2px;
+			border-radius: 4px;
+			background-color: #f0f0f0;
+			border: 1px solid #ccc;
+			margin: 0 3px;
+			user-select: none;
+		}
 	</style>
 </head>
 <div id="editor">
