--- a/packages/ckeditor5-editor-inline/tests/manual/sticky.html
+++ b/packages/ckeditor5-editor-inline/tests/manual/sticky.html
@@ -1,9 +1,7 @@
 <header>
 	CKEditor&nbsp;5 - Inline editor sticky panel manual test
 </header>
-<div style="height: 120px; margin-bottom: 20px;"></div>
-
-<!-- editor top edge: 40 + 120 + 400 = 560 -->
+<div id="header-placeholder"></div>
 
 <div id="editor">
 	<p>This is <a href="http://ckeditor.com"><strong>CKEditor5</strong></a> from <a href="http://cksource.com">CKSource</a>.</p>
@@ -18,7 +16,15 @@
 <div style="height: 2000px;"></div>
 
 <style>
-	body { margin: 0; }
+	body {
+		margin: 0;
+	}
+
+	#header-placeholder {
+		height: 120px;
+		margin-bottom: 20px;
+	}
+
 	header {
 		position: fixed;
 		top: 0;
