Add unit test and make issue reproducible in manual test.

--- a/packages/ckeditor5-fullscreen/tests/manual/fullscreen.html
+++ b/packages/ckeditor5-fullscreen/tests/manual/fullscreen.html
@@ -97,9 +97,13 @@
 <div class="custom-fullscreen-container" id="custom-fullscreen-container"></div>
 
 <style>
+	html {
+		scroll-behavior: smooth;
+	}
+
 	.editor-container {
 		width: 400px;
-		height: 200px;
+		height: 1500px;
 		overflow: scroll;
 	}
 
