--- a/packages/ckeditor5-media-embed/tests/manual/semanticmediaembed.html
+++ b/packages/ckeditor5-media-embed/tests/manual/semanticmediaembed.html
@@ -4,10 +4,7 @@
 		Additionally, the embedded Spotify player has started to throw an uncaught exception, but only on CI. See #9678.
 	-->
 	<meta name="x-cke-crawler-ignore-patterns" content='{
-		"request-failure": "vimeo.com",
-		"response-failure": [ "vimeo.com", "spotify.com", "challenges.cloudflare.com" ],
-		"console-error": [ "<svg> attribute preserveAspectRatio", "vimeo.com", "transparent NaN" ],
-		"uncaught-exception": "retargetingPixels is not defined"
+		"console-error": [ "<svg> attribute preserveAspectRatio", "transparent NaN" ]
 	}'>
 
 	<style>
