Fix `x-cke-crawler-ignore-patterns` tags in manual tests

--- a/packages/ckeditor5-html-support/tests/manual/mediaembed.html
+++ b/packages/ckeditor5-html-support/tests/manual/mediaembed.html
@@ -4,7 +4,7 @@
 		Additionally, the embedded Spotify player has started to throw an uncaught exception, but only on CI. See #9678.
 	-->
 	<meta name="x-cke-crawler-ignore-patterns" content='{
-		"console-error": [ "<svg> attribute preserveAspectRatio" ]
+		"console-error": [ "<svg> attribute preserveAspectRatio", "transparent NaN" ]
 	}'>
 </head>
 
