--- a/packages/ckeditor5-utils/tests/manual/duplicated-import/duplicated-import.html
+++ b/packages/ckeditor5-utils/tests/manual/duplicated-import/duplicated-import.html
@@ -1,6 +1,6 @@
 <head>
 	<meta name="x-cke-crawler-ignore-patterns" content='{
-		"console-error": "ckeditor-duplicated-modules"
+		"uncaught-exception": "ckeditor-duplicated-modules"
 	}'>
 
 	<meta http-equiv="Content-Security-Policy"
