--- a/tests/manual/all-features.html
+++ b/tests/manual/all-features.html
@@ -2,7 +2,7 @@
 	<meta http-equiv="Content-Security-Policy" content="script-src 'self' https://ckeditor.com 'unsafe-inline' 'unsafe-eval'">
 	<!-- For a totally unknown reason, Travis and Vimeo do not like each other and the test fail on CI. -->
 	<meta name="x-cke-crawler-ignore-patterns" content='{
-		"console-error": [ "<svg> attribute preserveAspectRatio" ]
+		"console-error": [ "<svg> attribute preserveAspectRatio", "transparent NaN" ]
 	}'>
 </head>
 
