--- a/tests/manual/article.html
+++ b/tests/manual/article.html
@@ -49,5 +49,5 @@
 	</blockquote>
 </div> -->
 <div id="editor">
-	<p>foo<strong>abc</strong>bar</p>
+	<p>foo<strong><i>abc</i></strong>bar</p>
 </div>
