--- a/packages/ckeditor5-paste-from-office/tests/_data/image/adjacent-groups/normalized.word2016.html
+++ b/packages/ckeditor5-paste-from-office/tests/_data/image/adjacent-groups/normalized.word2016.html
@@ -1,31 +1,31 @@
 <p>
 	<span>
-		<table cellpadding=0 cellspacing=0 align=left>
+		<table cellpadding=0 cellspacing=0 align=left style="border-style:none">
 			<tr>
-				<td width=27 height=4></td>
-				<td width=177></td>
-				<td width=30></td>
-				<td width=35></td>
-				<td width=60></td>
+				<td width=27 height=4 style="border-style:none"></td>
+				<td width=177 style="border-style:none"></td>
+				<td width=30 style="border-style:none"></td>
+				<td width=35 style="border-style:none"></td>
+				<td width=60 style="border-style:none"></td>
 			</tr>
 			<tr>
-				<td height=57></td>
-				<td colspan=4 align=left valign=top></td>
+				<td height=57 style="border-style:none"></td>
+				<td colspan=4 align=left valign=top style="border-style:none"></td>
 			</tr>
 			<tr>
-				<td height=11></td>
+				<td height=11 style="border-style:none"></td>
 			</tr>
 			<tr>
-				<td height=7></td>
-				<td colspan=2></td>
-				<td rowspan=2 align=left valign=top></td>
+				<td height=7 style="border-style:none"></td>
+				<td colspan=2 style="border-style:none"></td>
+				<td rowspan=2 align=left valign=top style="border-style:none"></td>
 			</tr>
 			<tr>
-				<td height=30></td>
-				<td rowspan=2 align=left valign=top></td>
+				<td height=30 style="border-style:none"></td>
+				<td rowspan=2 align=left valign=top style="border-style:none"></td>
 			</tr>
 			<tr>
-				<td height=24></td>
+				<td height=24 style="border-style:none"></td>
 			</tr>
 		</table>
 	</span>
