--- a/packages/ckeditor5-paste-from-office/tests/_data/bookmark/table/model.word.html
+++ b/packages/ckeditor5-paste-from-office/tests/_data/bookmark/table/model.word.html
@@ -1,20 +1,20 @@
 <paragraph>Bookmark on table</paragraph>
 <table tableBorderColor="{}" tableBorderStyle="none" tableBorderWidth="{}">
 <tableRow>
-<tableCell tableCellBorderColor="windowtext" tableCellBorderWidth="1.0pt" tableCellPadding="{"top":"0cm","bottom":"0cm","right":"5.4pt","left":"5.4pt"}" tableCellVerticalAlignment="top" tableCellWidth="225.4pt">
+<tableCell tableCellBorderColor="windowtext" tableCellPadding="{"top":"0px","bottom":"0px","right":"7px","left":"7px"}" tableCellVerticalAlignment="top" tableCellWidth="301px">
 <paragraph>
 <bookmark bookmarkId="on_table"></bookmark>text
 </paragraph>
 </tableCell>
-<tableCell tableCellBorderColor="windowtext" tableCellBorderStyle="{"top":"solid","bottom":"solid","right":"solid","left":"none"}" tableCellBorderWidth="1.0pt" tableCellPadding="{"top":"0cm","bottom":"0cm","right":"5.4pt","left":"5.4pt"}" tableCellVerticalAlignment="top" tableCellWidth="225.4pt">
+<tableCell tableCellBorderColor="windowtext" tableCellBorderStyle="{"top":"solid","bottom":"solid","right":"solid","left":"none"}" tableCellPadding="{"top":"0px","bottom":"0px","right":"7px","left":"7px"}" tableCellVerticalAlignment="top" tableCellWidth="301px">
 <paragraph></paragraph>
 </tableCell>
 </tableRow>
 <tableRow>
-<tableCell tableCellBorderColor="windowtext" tableCellBorderStyle="{"top":"none","bottom":"solid","right":"solid","left":"solid"}" tableCellBorderWidth="1.0pt" tableCellPadding="{"top":"0cm","bottom":"0cm","right":"5.4pt","left":"5.4pt"}" tableCellVerticalAlignment="top" tableCellWidth="225.4pt">
+<tableCell tableCellBorderColor="windowtext" tableCellBorderStyle="{"top":"none","bottom":"solid","right":"solid","left":"solid"}" tableCellPadding="{"top":"0px","bottom":"0px","right":"7px","left":"7px"}" tableCellVerticalAlignment="top" tableCellWidth="301px">
 <paragraph></paragraph>
 </tableCell>
-<tableCell tableCellBorderColor="{"bottom":"windowtext","right":"windowtext"}" tableCellBorderStyle="{"top":"none","left":"none","bottom":"solid","right":"solid"}" tableCellBorderWidth="{"bottom":"1.0pt","right":"1.0pt"}" tableCellPadding="{"top":"0cm","bottom":"0cm","right":"5.4pt","left":"5.4pt"}" tableCellVerticalAlignment="top" tableCellWidth="225.4pt">
+<tableCell tableCellBorderColor="{"bottom":"windowtext","right":"windowtext"}" tableCellBorderStyle="{"top":"none","left":"none","bottom":"solid","right":"solid"}" tableCellBorderWidth="{"bottom":"1px","right":"1px"}" tableCellPadding="{"top":"0px","bottom":"0px","right":"7px","left":"7px"}" tableCellVerticalAlignment="top" tableCellWidth="301px">
 <paragraph></paragraph>
 </tableCell>
 </tableRow>
@@ -23,20 +23,20 @@
 <paragraph>Bookmarks in cells</paragraph>
 <table tableBorderColor="{}" tableBorderStyle="none" tableBorderWidth="{}">
 <tableRow>
-<tableCell tableCellBorderColor="windowtext" tableCellBorderWidth="1.0pt" tableCellPadding="{"top":"0cm","bottom":"0cm","right":"5.4pt","left":"5.4pt"}" tableCellVerticalAlignment="top" tableCellWidth="225.4pt">
+<tableCell tableCellBorderColor="windowtext" tableCellPadding="{"top":"0px","bottom":"0px","right":"7px","left":"7px"}" tableCellVerticalAlignment="top" tableCellWidth="301px">
 <paragraph>
 <bookmark bookmarkId="before_text_in_cell"></bookmark>Before text in cell
 </paragraph>
 </tableCell>
-<tableCell tableCellBorderColor="windowtext" tableCellBorderStyle="{"top":"solid","bottom":"solid","right":"solid","left":"none"}" tableCellBorderWidth="1.0pt" tableCellPadding="{"top":"0cm","bottom":"0cm","right":"5.4pt","left":"5.4pt"}" tableCellVerticalAlignment="top" tableCellWidth="225.4pt">
+<tableCell tableCellBorderColor="windowtext" tableCellBorderStyle="{"top":"solid","bottom":"solid","right":"solid","left":"none"}" tableCellPadding="{"top":"0px","bottom":"0px","right":"7px","left":"7px"}" tableCellVerticalAlignment="top" tableCellWidth="301px">
 <paragraph>On <bookmark bookmarkId="on_text_in_cell"></bookmark>text in cell</paragraph>
 </tableCell>
 </tableRow>
 <tableRow>
-<tableCell tableCellBorderColor="windowtext" tableCellBorderStyle="{"top":"none","bottom":"solid","right":"solid","left":"solid"}" tableCellBorderWidth="1.0pt" tableCellPadding="{"top":"0cm","bottom":"0cm","right":"5.4pt","left":"5.4pt"}" tableCellVerticalAlignment="top" tableCellWidth="225.4pt">
+<tableCell tableCellBorderColor="windowtext" tableCellBorderStyle="{"top":"none","bottom":"solid","right":"solid","left":"solid"}" tableCellPadding="{"top":"0px","bottom":"0px","right":"7px","left":"7px"}" tableCellVerticalAlignment="top" tableCellWidth="301px">
 <paragraph></paragraph>
 </tableCell>
-<tableCell tableCellBorderColor="{"bottom":"windowtext","right":"windowtext"}" tableCellBorderStyle="{"top":"none","left":"none","bottom":"solid","right":"solid"}" tableCellBorderWidth="{"bottom":"1.0pt","right":"1.0pt"}" tableCellPadding="{"top":"0cm","bottom":"0cm","right":"5.4pt","left":"5.4pt"}" tableCellVerticalAlignment="top" tableCellWidth="225.4pt">
+<tableCell tableCellBorderColor="{"bottom":"windowtext","right":"windowtext"}" tableCellBorderStyle="{"top":"none","left":"none","bottom":"solid","right":"solid"}" tableCellBorderWidth="{"bottom":"1px","right":"1px"}" tableCellPadding="{"top":"0px","bottom":"0px","right":"7px","left":"7px"}" tableCellVerticalAlignment="top" tableCellWidth="301px">
 <paragraph></paragraph>
 </tableCell>
 </tableRow>
