--- a/packages/ckeditor5-paste-from-office/tests/_data/image/adjacent-groups/normalized.safari.word2016.html
+++ b/packages/ckeditor5-paste-from-office/tests/_data/image/adjacent-groups/normalized.safari.word2016.html
@@ -2,23 +2,23 @@
 	<span style="position: relative; z-index: 251661312; left: 11px; top: -1px; width: 225px; height: 104px;"></span>
 </p>
 
-<table cellpadding="0" cellspacing="0" align="left" style="caret-color: rgb(0, 0, 0); color: rgb(0, 0, 0); font-family: -webkit-standard; font-style: normal; font-variant-caps: normal; font-weight: normal; letter-spacing: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; text-decoration: none;">
+<table cellpadding="0" cellspacing="0" align="left" style=";border-style:none;caret-color: rgb(0, 0, 0); color: rgb(0, 0, 0); font-family: -webkit-standard; font-style: normal; font-variant-caps: normal; font-weight: normal; letter-spacing: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; text-decoration: none;">
 	<tbody>
 		<tr>
-			<td width="0" height="0"></td>
-			<td width="180"></td>
-			<td width="45"></td>
+			<td width="0" height="0" style="border-style:none"></td>
+			<td width="180" style="border-style:none"></td>
+			<td width="45" style="border-style:none"></td>
 		</tr>
 		<tr>
-			<td height="41"></td>
-			<td colspan="2" align="left" valign="top"></td>
+			<td height="41" style="border-style:none"></td>
+			<td colspan="2" align="left" valign="top" style="border-style:none"></td>
 		</tr>
 		<tr>
-			<td height="10"></td>
+			<td height="10" style="border-style:none"></td>
 		</tr>
 		<tr>
-			<td height="53"></td>
-			<td align="left" valign="top"></td>
+			<td height="53" style="border-style:none"></td>
+			<td align="left" valign="top" style="border-style:none"></td>
 		</tr>
 	</tbody>
 </table>
