--- a/packages/ckeditor5-paste-from-office/tests/_data/table/tablecellproperties/model.html
+++ b/packages/ckeditor5-paste-from-office/tests/_data/table/tablecellproperties/model.html
@@ -1,4 +1,4 @@
-<table tableBorderColor="{}" tableBorderStyle="none" tableBorderWidth="{}">
+<table tableBorderColor="{}" tableBorderStyle="none" tableBorderWidth="{}" tableWidth="597px">
 	<tableRow>
 		<tableCell tableCellBackgroundColor="#CCCCCC" tableCellBorderColor="windowtext" tableCellPadding="{"top":"0px","bottom":"0px","right":"7px","left":"7px"}" tableCellWidth="59.0%">
 			<paragraph><$text bold="true">Project Phase</$text></paragraph>
