--- a/packages/ckeditor5-html-support/tests/manual/ghs-all-features.html
+++ b/packages/ckeditor5-html-support/tests/manual/ghs-all-features.html
@@ -24,55 +24,55 @@
 	</style>
 </head>
 <div style="display: flex">
-	<div style="width: 40%; margin-right: 20px">
+	<div style="width: calc(50% - 20px); margin-right: 20px">
 		<div id="editor">
-			<p style="color:blue;">Feature paragraph</p>
+			<p style="color:blue;" data-foo="bar">Feature paragraph</p>
 
-			<h2 style="color:green">Feature heading1</h2>
-			<h3 style="color:green">Feature heading2</h3>
-			<h4 style="color:green">Feature heading3</h4>
+			<h2 style="color:green" data-foo="bar">Feature heading1</h2>
+			<h3 style="color:green" data-foo="bar">Feature heading2</h3>
+			<h4 style="color:green" data-foo="bar">Feature heading3</h4>
 
-			<p><strong style="color:blue;">Feature bold</strong></p>
-			<p><i style="color:blue;">Feature italic</i></p>
-			<p><s style="color:blue;">Feature strike</s></p>
-			<p><u style="color:blue;">Feature underline</u></p>
-			<p><code style="color:blue;">Feature code</code></p>
-			<p><sub style="color:blue;">Feature subscript</sub></p>
-			<p><sup style="color:blue;">Feature superscript</sup></p>
+			<p><strong style="color:blue;" data-foo="bar">Feature bold</strong></p>
+			<p><i style="color:blue;" data-foo="bar">Feature italic</i></p>
+			<p><s style="color:blue;" data-foo="bar">Feature strike</s></p>
+			<p><u style="color:blue;" data-foo="bar">Feature underline</u></p>
+			<p><code style="color:blue;" data-foo="bar">Feature code</code></p>
+			<p><sub style="color:blue;" data-foo="bar">Feature subscript</sub></p>
+			<p><sup style="color:blue;" data-foo="bar">Feature superscript</sup></p>
 
-			<p><a style="color:green;" href="https://example.com">Link feature</a></p>
+			<p><a style="color:green;" data-foo="bar" href="https://example.com">Link feature</a></p>
 			<p><a name="anchor" id="anchor">Anchor (name, ID only)</a></p>
 
 			<p><mark class="marker-yellow" data-mark>Mark feature</mark></p>
 
-			<p><span class="text-big text-italic" style="background-color:hsl(60, 75%, 60%);color:hsl(240, 75%, 60%);font-family:'Courier New', Courier, monospace;border:1px solid black">Font feature</span></p>
+			<p><span class="text-big text-italic" style="background-color:hsl(60, 75%, 60%);color:hsl(240, 75%, 60%);font-family:'Courier New', Courier, monospace;border:1px solid black" data-foo="bar">Font feature</span></p>
 
-			<ul style="background:blue;">
-				<li style="color:yellow;">Bulleted List feature</li>
-				<li style="color:yellow;">Bulleted List feature</li>
-				<li style="color:yellow;">Bulleted List feature</li>
+			<ul style="background:blue;" data-foo="bar">
+				<li style="color:yellow;" data-foo="bar">Bulleted List feature</li>
+				<li style="color:yellow;" data-foo="bar">Bulleted List feature</li>
+				<li style="color:yellow;" data-foo="bar">Bulleted List feature</li>
 			</ul>
 
-			<ol style="background:blue;">
-				<li style="color:yellow;">Numbered List feature</li>
-				<li style="color:yellow;">Numbered List feature</li>
-				<li style="color:yellow;">Numbered List feature</li>
+			<ol style="background:blue;" data-foo="bar">
+				<li style="color:yellow;" data-foo="bar">Numbered List feature</li>
+				<li style="color:yellow;" data-foo="bar">Numbered List feature</li>
+				<li style="color:yellow;" data-foo="bar">Numbered List feature</li>
 			</ol>
 
-			<ul class="todo-list" style="background:blue;">
-				<li style="color:yellow;">
+			<ul class="todo-list" style="background:blue;" data-foo="bar">
+				<li style="color:yellow;" data-foo="bar">
 					<label class="todo-list__label">
 						<input type="checkbox" disabled="disabled">
 						<span class="todo-list__label__description">Todo List feature</span>
 					</label>
 				</li>
-				<li style="color:yellow;">
+				<li style="color:yellow;" data-foo="bar">
 					<label class="todo-list__label">
 						<input type="checkbox" disabled="disabled">
 						<span class="todo-list__label__description">Todo List feature</span>
 					</label>
 				</li>
-				<li style="color:yellow;">
+				<li style="color:yellow;" data-foo="bar">
 					<label class="todo-list__label">
 						<input type="checkbox" disabled="disabled">
 						<span class="todo-list__label__description">Todo List feature</span>
@@ -80,24 +80,24 @@
 				</li>
 			</ul>
 
-			<blockquote style="color:blue;"><p>Blockquote Feature</p></blockquote>
+			<blockquote style="color:blue;" data-foo="bar"><p>Blockquote Feature</p></blockquote>
 
-			<figure style="border: 1px solid blue;" class="image">
-				<img src="sample.jpg" style="border: 1px solid red;" alt="bar">
-				<figcaption style="background:yellow;">Caption</figcaption>
+			<figure style="border: 1px solid blue;" class="image" data-foo="bar">
+				<img src="sample.jpg" style="border: 1px solid red;" alt="bar" data-foo="bar">
+				<figcaption style="background:yellow;" data-foo="bar">Caption</figcaption>
 			</figure>
 
-			<pre style="background:blue;"><code style="color:yellow;" class="language-plaintext">Code Block</code></pre>
+			<pre style="background:blue;" data-foo="bar"><code style="color:yellow;" class="language-plaintext" data-foo="bar">Code Block</code></pre>
 
-			<table style="background:blue;">
-				<thead style="background:green;">
-					<tr>
-						<th style="color:red;">h1</th>
-						<th style="color:red;">h2</th>
-						<th style="color:red;">h3</th>
+			<table style="background:blue;" data-foo="bar">
+				<thead style="background:green;" data-foo="bar">
+					<tr data-foo="bar">
+						<th style="color:red;" data-foo="bar">h1</th>
+						<th style="color:red;" data-foo="bar">h2</th>
+						<th style="color:red;" data-foo="bar">h3</th>
 					</tr>
 				</thead>
-				<tbody style="background:violet;">
+				<tbody style="background:violet;" data-foo="bar">
 					<tr>
 						<td style="color:yellow;">1.1</td>
 						<td style="color:yellow;">1.2</td>
@@ -111,8 +111,8 @@
 				</tbody>
 			</table>
 
-			<figure class="table" style="width:100%;">
-				<table class="ck-table-resized">
+			<figure class="table" style="width:100%;" data-foo="bar">
+				<table class="ck-table-resized" data-foo="bar">
 					<colgroup>
 						<col style="width:8.74%;">
 						<col style="width:8.94%;">
@@ -136,24 +136,24 @@
 				</table>
 			</figure>
 
-			<oembed data-bar url="https://www.youtube.com/watch?v=ZVv7UMQPEWk"></oembed>
+			<oembed data-bar url="https://www.youtube.com/watch?v=ZVv7UMQPEWk" data-foo="bar"></oembed>
 
-			<div style="border: 1px solid blue" class="raw-html-embed">HTML snippet</div>
+			<div style="border: 1px solid blue" class="raw-html-embed" data-foo="bar">HTML snippet</div>
 
 			<div data-foo class="page-break" style="page-break-after:always;"><span style="display:none;">&nbsp;</span></div>
-			<hr style="background-color: red; height: 10px;">
-			<hr>
-			<hr style="background-color: blue">
+			<hr style="background-color: red; height: 10px;" data-foo="bar">
+			<hr data-foo="bar">
+			<hr style="background-color: blue" data-foo="bar">
 
-			<p><i class="inline-icon"></i> empty inline at start</p>
-			<p>Text with <i class="inline-icon"></i> empty inline inside</p>
-			<p>Text with empty inline at the end <i class="inline-icon"></i></p>
+			<p><i class="inline-icon" data-foo="bar"></i> empty inline at start</p>
+			<p>Text with <i class="inline-icon" data-foo="bar"></i> empty inline inside</p>
+			<p>Text with empty inline at the end <i class="inline-icon" data-foo="bar"></i></p>
 		</div>
 	</div>
 
-	<div style="width: 40%">
+	<div style="width: 50%">
 		<h1 style="margin:12px 0 0 0; padding:0 0 5px 0; font-size: 18px; border-bottom: solid 1px grey">Source content:</h1>
-		<div id="preview"></div>
+		<div id="preview" class="ck-content"></div>
 	</div>
 </div>
 <script>
