--- a/packages/ckeditor5-markdown-gfm/tests/manual/gfmdataprocessor/gfmdataprocessor.html
+++ b/packages/ckeditor5-markdown-gfm/tests/manual/gfmdataprocessor/gfmdataprocessor.html
@@ -1,8 +1,16 @@
 <h2>GitHub Flavored Markdown</h2>
+
+<p>Enter allowed HTML tag and press "Allow". Repeat to add more tags.</p>
+<input id="allowed_tag_name" type="text" placeholder="Allowed HTML tag" />
+<button id="button_allow_tag">Allow</button>
+<br />
+<br />
+<br />
+<p>Markdown input:</p>
 <textarea id="markdown" placeholder="Enter markdown..." style="width: 50%; height: 100px"></textarea>
 <br/>
 <button id="button_to_view">Convert to view</button>
-<h2>View</h2>
+<h2>HTML view:</h2>
 <textarea  id="view" placeholder="Enter view string..." style="width: 50%; height: 100px"></textarea>
 <br/>
 <button id="button_to_md">Convert to markdown</button>
