--- a/packages/ckeditor5-markdown-gfm/tests/manual/gfmdataprocessor/gfmdataprocessor.html
+++ b/packages/ckeditor5-markdown-gfm/tests/manual/gfmdataprocessor/gfmdataprocessor.html
@@ -1,16 +1,20 @@
 <h2>GitHub Flavored Markdown</h2>
 
+<h3>Allowed tags:</h3>
 <p>Enter allowed HTML tag and press "Allow". Repeat to add more tags.</p>
 <input id="allowed_tag_name" type="text" placeholder="Allowed HTML tag" />
 <button id="button_allow_tag">Allow</button>
 <br />
 <br />
-<br />
-<p>Markdown input:</p>
+
+<h3>Markdown input:</h3>
 <textarea id="markdown" placeholder="Enter markdown..." style="width: 50%; height: 100px"></textarea>
 <br/>
 <button id="button_to_view">Convert to view</button>
-<h2>HTML view:</h2>
+<br/>
+<br/>
+
+<h3>HTML view:</h3>
 <textarea  id="view" placeholder="Enter view string..." style="width: 50%; height: 100px"></textarea>
 <br/>
 <button id="button_to_md">Convert to markdown</button>
